fixes z-index issue on righr border on chat page

--- a/public/assets/css/custom.less
+++ b/public/assets/css/custom.less
@@ -6300,6 +6300,9 @@ img {
 .customSpinner{
   background-color: none !important;
 }
+.right-border{
+  z-index:70 !important;
+}
 // v slider
 .vSlider {
   width: 150px;
